...
            android:id="@+id/guideline_horizontal_end"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="30dp"
    />

    <LinearLayout
            android:id="@+id/scroll_views_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:visibility="visible"
...
